@@ -1,3 +1,8 @@
+2006-05-30  Uros Bizjak  <uros@kss-loka.si>
+
+	PR target/27790
+	* gcc.target/i386/pr27790.c: New test.
+
 2006-05-29  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
 	PR libgfortran/27757
